--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="users"></div>
+    <div id="map"></div>
+    <div id="bands"></div>
   </body>
 </html>
